--- a/generators/libs/templates/packages/core/package.json
+++ b/generators/libs/templates/packages/core/package.json
@@ -7,7 +7,9 @@
   "typings": "dist/esm/index.d.ts",
   "scripts": {
     "build": "gulp",
+    "build:watch": "gulp watch",
     "test": "jest",
+    "test:watch": "jest --watch",
     "release": "release-it"
   },
   "license": "MIT",
