--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@<%= scope %>/<%= project_name %>",
+  "name": "<%= project_name %>",
   "private": true,
   "workspaces": {
     "packages": [
@@ -15,6 +15,7 @@
     "lerna:list": "lerna list",
     "lerna:bootstrap": "lerna bootstrap",
     "build": "lerna run build --since master --no-private",
+    "build:all": "lerna run build",
     "publish": "npm run build && lerna publish --no-private"
   },
   "homepage": "https://js.work",
